--- a/Resources/Shared.it.resx
+++ b/Resources/Shared.it.resx
@@ -117,15 +117,35 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Chapter1Text" xml:space="preserve">
-    <value>Once when I was six years old I saw a magnificent picture in a book, called True
-Stories from Nature, about the primeval forest. It was a picture of a boa constrictor
-in the act of swallowing an animal. Here is a copy of the drawing.</value>
-  </data>
-  <data name="Chapter1Title" xml:space="preserve">
-    <value>Chapter 1</value>
-  </data>
   <data name="Language" xml:space="preserve">
-    <value>English</value>
+    <value>Italiano</value>
+  </data>
+  <data name="Chapter1.Title" xml:space="preserve">
+    <value>Capitolo 1</value>
+  </data>
+  <data name="Chapter1.Text" xml:space="preserve">
+    <value>Un tempo lontano, quando avevo sei anni, in un libro sulle foreste primordiali, intitolato 'Storie vissute della natura', vidi un magnifico disegno. Rappresentava un serpente boa nell'atto di inghiottire un animale.</value>
+  </data>
+  <data name="Chapter2.Title" xml:space="preserve">
+    <value>Capitolo 2</value>
+  </data>
+  <data name="Chapter2.Text" xml:space="preserve">
+    <value>Così ho trascorso la mia vita solo, senza nessuno cui poter parlare, fino a sei anni fa quando ebbi un incidente col mio aeroplano, nel deserto del Sahara. Qualche cosa si era rotta nel motore, e siccome non avevo con me ne’ un meccanico, ne’ dei passeggeri, mi accinsi da solo a cercare di riparare il guasto.</value>
+  </data>
+  <!-- These values will be used to localize paths, such as /Libro/Capitolo1 -->
+  <data name="Routing.Book" xml:space="preserve">
+    <value>Libro</value>
+  </data>
+  <data name="Routing.Book.Chapter1" xml:space="preserve">
+    <value>Capitolo1</value>
+  </data>
+  <data name="Routing.Book.Chapter2" xml:space="preserve">
+    <value>Capitolo2</value>
+  </data>
+  <data name="Routing.Home" xml:space="preserve">
+    <value>Vetrina</value>
+  </data>
+  <data name="Routing.Home.Index" xml:space="preserve">
+    <value>Indice</value>
   </data>
 </root>
